# TCP_PROT

./: README.md  seal설치법.txt
c/: tcp_protocol_client.h  test_client.cpp
cpp/: tcp_protocol_client.h  test  test_client  test_client.cpp
example/sim_cpp/: controller  controller.cpp  plant.py  tcp_protocol_server.py
example/sim_go/: controller.go  go.mod  plant.py  tcp_protocol_client.go
example/sim_py/: controller.py  plant.py  tcp_protocol_client.py
go/: tcp_protocol_client.go  test_client.go
interface/ctrl_cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  controller.h  controller_enc.h  system  system.cpp  system_enc  system_enc.cpp
interface/ctrl_py/: controller.py  system.py  system_delayed.py  system_delayed_for_sim.py  system_ideal.py  system_sim.py
interface/plant_py/: plant_quanser.py  plant_quanser_delayed.py  plant_sim_delayed.py  plant_sim_original.py  plant_simulation.py
interface/plant_py/simulation/: plant_sim_delayed.py  plant_sim_original.py
interface/plant_py/system/: plant_quanser_delayed.py  plant_quanser_ideal.py
matlab/quanser simulation/: plant_continous_model.mat  system_load.m  system_sim.slx
matlab_quanser_sim/: system_sim.slx
python/: tcp_protocol_client.py  tcp_protocol_server.py  test_client.py  test_server.py
